--- a/projects/loft-photo-lite-3/layout.html
+++ b/projects/loft-photo-lite-3/layout.html
@@ -60,6 +60,6 @@
         <div class="component-user-photos"></div>
     </div>
 </div>
-<script src="./index.js" type="module"></script>
+<script src="./index.js"></script>
 </body>
 </html>
